--- a/alpha.ipynb
+++ b/alpha.ipynb
@@ -4,73 +4,118 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torchvision import datasets, transforms\n",
-    "\n",
-    "# Define data transformation\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),  # Resize images to 224x224\n",
-    "    transforms.ToTensor(),           # Convert images to PyTorch tensors\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Normalize image data\n",
-    "])\n",
-    "\n",
-    "# Load dataset\n",
-    "dataset = datasets.ImageFolder('./data/malaria', transform=transform)\n",
-    "\n",
-    "# Create data loaders\n",
-    "#loader = torch.utils.data.DataLoader(dataset, batch_size=1, shuffle=True)\n",
-    "\n",
-    "# Iterate through the data loader to access batches of images and labels\n",
-    "#for images, labels in loader:\n",
-    "    # images: tensor of shape (batch_size, channels, height, width)\n",
-    "    # labels: tensor of shape (batch_size)\n",
-    "    # Perform your operations here\n",
-    "#    print(images.shape)\n",
-    "#    print(labels)\n",
-    "#    break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "img = plt.imread('./data/malaria/Parasitized/C33P1thinF_IMG_20150619_114756a_cell_179.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(163, 142, 3)"
+       "'2.7.2.dev'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img.shape"
+    "#!pip install --pre deepchem\n",
+    "\n",
+    "import deepchem as dc\n",
+    "dc.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "new = np.resize(img, (224, 224, 3))"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from deepchem.data import NumpyDataset\n",
+    "from deepchem.models.torch_models import CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., ..., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "dummy_1 = np.ones((13780))\n",
+    "dummy_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unsupported image filetype for data/malaria.zip",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_location \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/malaria.zip\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m malaria_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImageDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdata_location\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdummy_1\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/cc/lib/python3.10/site-packages/deepchem/data/datasets.py:2752\u001b[0m, in \u001b[0;36mImageDataset.__init__\u001b[0;34m(self, X, y, w, ids)\u001b[0m\n\u001b[1;32m   2750\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   2751\u001b[0m     y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((n_samples,))\n\u001b[0;32m-> 2752\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_X_shape \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_find_array_shape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2753\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_y_shape \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_find_array_shape(y)\n\u001b[1;32m   2754\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m w \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/anaconda3/envs/cc/lib/python3.10/site-packages/deepchem/data/datasets.py:2779\u001b[0m, in \u001b[0;36mImageDataset._find_array_shape\u001b[0;34m(self, array)\u001b[0m\n\u001b[1;32m   2777\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(array, np\u001b[38;5;241m.\u001b[39mndarray):\n\u001b[1;32m   2778\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m array\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m-> 2779\u001b[0m image_shape \u001b[38;5;241m=\u001b[39m \u001b[43mload_image_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43marray\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m   2780\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m(np\u001b[38;5;241m.\u001b[39mconcatenate([[\u001b[38;5;28mlen\u001b[39m(array)], image_shape]))\n",
+      "File \u001b[0;32m~/anaconda3/envs/cc/lib/python3.10/site-packages/deepchem/utils/data_utils.py:213\u001b[0m, in \u001b[0;36mload_image_files\u001b[0;34m(input_files)\u001b[0m\n\u001b[1;32m    211\u001b[0m         images\u001b[38;5;241m.\u001b[39mappend(imarray)\n\u001b[1;32m    212\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 213\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnsupported image filetype for \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m input_file)\n\u001b[1;32m    214\u001b[0m \u001b[38;5;66;03m# dtype=object allows for arrays(images here) of arbitrary size\u001b[39;00m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[0;31mValueError\u001b[0m: Unsupported image filetype for data/malaria.zip"
+     ]
+    }
+   ],
+   "source": [
+    "data_location = 'data/malaria.zip'\n",
+    "loader = dc.data.ImageLoader()\n",
+    "loader.create_dataset(data_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbbc2_dataset = dc.molnet.load_bbbc002(splitter='random')\n",
+    "tasks, dataset, transforms = bbbc2_dataset\n",
+    "train, val, test = dataset\n",
+    "\n",
+    "train_x, train_y, train_w, train_ids = train.X, train.y, train.w, train.ids\n",
+    "val_x, val_y, val_w, val_ids = val.X, val.y, val.w, val.ids\n",
+    "test_x, test_y, test_w, test_ids = test.X, test.y, test.w, test.ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of train data: (40, 512, 512)\n",
+      "Shape of train labels: (40,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Shape of train data: {train_x.shape}\")\n",
+    "print(f\"Shape of train labels: {train_y.shape}\")"
    ]
   },
   {
