--- a/alpha.ipynb
+++ b/alpha.ipynb
@@ -246,6 +246,84 @@
     "preds = bst.predict(X_test)\n",
     "preds, y_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.23529412, 0.23529412, 0.23529412, 1.        ],\n",
+       "        [0.23529412, 0.23529412, 0.23529412, 1.        ],\n",
+       "        [0.23529412, 0.23529412, 0.23529412, 1.        ],\n",
+       "        ...,\n",
+       "        [0.23529412, 0.23529412, 0.23529412, 1.        ],\n",
+       "        [0.23529412, 0.23529412, 0.23529412, 1.        ],\n",
+       "        [0.23137255, 0.23137255, 0.23137255, 1.        ]],\n",
+       "\n",
+       "       [[0.10196079, 0.        , 0.12941177, 1.        ],\n",
+       "        [0.10588235, 0.        , 0.13725491, 1.        ],\n",
+       "        [0.10980392, 0.        , 0.13725491, 1.        ],\n",
+       "        ...,\n",
+       "        [0.10980392, 0.        , 0.13725491, 1.        ],\n",
+       "        [0.10588235, 0.        , 0.12941177, 1.        ],\n",
+       "        [0.07450981, 0.        , 0.09411765, 1.        ]],\n",
+       "\n",
+       "       [[0.23529412, 0.00392157, 0.3019608 , 1.        ],\n",
+       "        [0.24705882, 0.00392157, 0.31764707, 1.        ],\n",
+       "        [0.2509804 , 0.00392157, 0.31764707, 1.        ],\n",
+       "        ...,\n",
+       "        [0.2509804 , 0.00392157, 0.3137255 , 1.        ],\n",
+       "        [0.24313726, 0.        , 0.3019608 , 1.        ],\n",
+       "        [0.1764706 , 0.        , 0.21960784, 1.        ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.25490198, 0.01960784, 0.33333334, 1.        ],\n",
+       "        [0.2627451 , 0.02352941, 0.34509805, 1.        ],\n",
+       "        [0.27058825, 0.02352941, 0.3529412 , 1.        ],\n",
+       "        ...,\n",
+       "        [0.27058825, 0.02745098, 0.3529412 , 1.        ],\n",
+       "        [0.25882354, 0.02352941, 0.34117648, 1.        ],\n",
+       "        [0.1882353 , 0.01176471, 0.24705882, 1.        ]],\n",
+       "\n",
+       "       [[0.24705882, 0.01960784, 0.3254902 , 1.        ],\n",
+       "        [0.25882354, 0.02745098, 0.34117648, 1.        ],\n",
+       "        [0.2627451 , 0.02745098, 0.34509805, 1.        ],\n",
+       "        ...,\n",
+       "        [0.2627451 , 0.02352941, 0.34509805, 1.        ],\n",
+       "        [0.25490198, 0.01960784, 0.33333334, 1.        ],\n",
+       "        [0.18431373, 0.01568628, 0.24313726, 1.        ]],\n",
+       "\n",
+       "       [[0.20784314, 0.01960784, 0.27450982, 1.        ],\n",
+       "        [0.21960784, 0.02352941, 0.28627452, 1.        ],\n",
+       "        [0.22352941, 0.02745098, 0.29411766, 1.        ],\n",
+       "        ...,\n",
+       "        [0.21960784, 0.01568628, 0.2901961 , 1.        ],\n",
+       "        [0.21176471, 0.01568628, 0.28235295, 1.        ],\n",
+       "        [0.15686275, 0.01176471, 0.20784314, 1.        ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import deepchem as dc\n",
+    "\n",
+    "from deepchem.data.datasets import ImageDataset\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "path = './data/demo.png'\n",
+    "\n",
+    "data = plt.imread(path)\n",
+    "data"
+   ]
   }
  ],
  "metadata": {
