--- a/WBC-Classification.ipynb
+++ b/WBC-Classification.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_eosinophil_path = './data/WBC/TRAIN/EOSINOPHIL' #2497\n",
-    "train_lymphocyte_path = './data/WBC/TRAIN/LYMPHOCYTE' #2483\n",
-    "train_monocyte_path = './data/WBC/TRAIN/MONOCYTE' #2478\n",
-    "train_neutrophil_path = './data/WBC/TRAIN/NEUTROPHIL' #2499\n",
+    "train_eosinophil_path = './TRAIN/EOSINOPHIL' #2497\n",
+    "train_lymphocyte_path = './TRAIN/LYMPHOCYTE' #2483\n",
+    "train_monocyte_path = './TRAIN/MONOCYTE' #2478\n",
+    "train_neutrophil_path = './TRAIN/NEUTROPHIL' #2499\n",
     "\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,38 +20,38 @@
     "train_monocyte = []\n",
     "train_neutrophil = []\n",
     "\n",
-    "for file in os.listdir(train_eosinophil_path):\n",
+    "for file in os.listdir(train_eosinophil_path)[:500]:\n",
     "    train_eosinophil.append(plt.imread(train_eosinophil_path + '/' + file))\n",
     "train_eosinophil = np.array(train_eosinophil)\n",
     "\n",
-    "for file in os.listdir(train_lymphocyte_path):\n",
+    "for file in os.listdir(train_lymphocyte_path)[:500]:\n",
     "    train_lymphocyte.append(plt.imread(train_lymphocyte_path + '/' + file))\n",
     "train_lymphocyte = np.array(train_lymphocyte)\n",
     "\n",
-    "for file in os.listdir(train_monocyte_path):\n",
+    "for file in os.listdir(train_monocyte_path)[:500]:\n",
     "    train_monocyte.append(plt.imread(train_monocyte_path + '/' + file))\n",
     "train_monocyte = np.array(train_monocyte)\n",
     "\n",
-    "for file in os.listdir(train_neutrophil_path):\n",
+    "for file in os.listdir(train_neutrophil_path)[:500]:\n",
     "    train_neutrophil.append(plt.imread(train_neutrophil_path + '/' + file))\n",
     "train_neutrophil = np.array(train_neutrophil)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((2497, 240, 320, 3),\n",
-       " (2483, 240, 320, 3),\n",
-       " (2478, 240, 320, 3),\n",
-       " (2499, 240, 320, 3))"
+       "((500, 240, 320, 3),\n",
+       " (500, 240, 320, 3),\n",
+       " (500, 240, 320, 3),\n",
+       " (500, 240, 320, 3))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,109 +62,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#train_y = np.ndarray.fill(2497, 0) + np.ndarray.fill(2483, 1) + np.ndarray.fill(2478, 2) + np.ndarray.fill(2499, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
-       "       [0., 1., 0., 0.]])"
+       "(2000, 1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.random.rand(10, 4)\n",
-    "a.fill(0)\n",
-    "a[:, 1].fill(1)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function list.extend(iterable, /)>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y = [np.random.rand(2497,4), np.random.rand(2483,4), np.random.rand(2478,4), np.random.rand(2499,4)]\n",
-    "train_y[0].fill(0)\n",
-    "train_y[1].fill(1)\n",
-    "train_y[2].fill(2)\n",
-    "train_y[3].fill(3)\n",
-    "empty = []\n",
-    "empty.extend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9957, 4)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y = np.random.rand(2497+2483+2478+2499, 4)\n",
+    "train_y = np.random.rand(500+500+500+500, 1)\n",
     "train_y.fill(0)\n",
-    "train_y[0:2497, 0] = 1\n",
-    "train_y[2497:2497+2483, 1] = 1\n",
-    "train_y[2497+2483:2497+2483+2478, 2] = 1\n",
-    "train_y[2497+2483+2478:2497+2483+2478+2499, 3] = 1\n",
+    "train_y[0:500, 0] = 0\n",
+    "train_y[500:500+500, 0] = 1\n",
+    "train_y[500+500:500+500+500, 0] = 2\n",
+    "train_y[500+500+500:500+500+500+500, 0] = 3\n",
     "train_y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9957, 240, 320, 3)"
+       "(2000, 240, 320, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,21 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X_reshaped = train_X.reshape((2000, 240*320*3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
     "# read data\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train_X, train_y, test_size=.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(train_X_reshaped, train_y, test_size=.2)\n",
     "# create model instance\n",
-    "bst = XGBClassifier(n_estimators=2, max_depth=2, learning_rate=1, objective='binary:logistic')\n",
-    "# fit model\n",
-    "bst.fit(X_train[:1000], y_train[:1000])\n",
-    "# make predictions\n",
-    "preds = bst.predict(X_test[:100])\n",
-    "preds, y_test[:100]"
+    "bst = XGBClassifier(n_estimators=3, max_depth=3, learning_rate=1)"
    ]
   },
   {
@@ -203,7 +140,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fit model\n",
+    "bst.fit(X_train[:1000], y_train[:1000])\n",
+    "preds = bst.predict(X_test[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boola = preds.astype(np.float64) == y_test[:100].reshape(1, 100)\n",
+    "boola.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "file_name = \"xgb_reg.pkl\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save\n",
+    "pickle.dump(bst, open(file_name, \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 2, 3, 2, 3, 2, 0, 2, 0, 0, 0, 1, 3, 0, 3, 0, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load\n",
+    "xgb_model_loaded = pickle.load(open(file_name, \"rb\"))\n",
+    "\n",
+    "# test\n",
+    "ind = 1\n",
+    "test = X_test[:20]\n",
+    "xgb_model_loaded.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_eosinophil_path = './TRAIN/EOSINOPHIL' #2497\n",
+    "file_0 = os.listdir(train_eosinophil_path)[5]\n",
+    "\n",
+    "data = plt.imread(train_eosinophil_path + '/' + file_0)\n",
+    "\n",
+    "xgb_model_loaded.predict(data.reshape(1, 240*320*3))"
+   ]
   }
  ],
  "metadata": {
